<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.sistema.miscontactos.DatosContacto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/espacio_separacion_16">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_separacion_16"
            android:text="@string/confirmar_datos"
            android:textAlignment="center"
            android:textSize="@dimen/tamanno_texto"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_separacion_16"
            android:text="@string/nombre"
            android:textSize="@dimen/tamanno_texto"/>

        <TextView
            android:id="@+id/tvFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_separacion_16"
            android:text="@string/fecha_nacimiento"
            android:textSize="@dimen/tamanno_texto"/>

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_separacion_16"
            android:text="@string/telefono"
            android:textSize="@dimen/tamanno_texto"/>

        <TextView
            android:id="@+id/tvEMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_separacion_16"
            android:text="@string/email"
            android:textSize="@dimen/tamanno_texto" />

        <TextView
            android:id="@+id/tvDescripcionContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/espacio_separacion_16"
            android:text="@string/descripcion_contacto"
            android:textSize="@dimen/tamanno_texto"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/espacio_separacion_16">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="editarContacto"
            android:text="@string/editar_contacto" />
    </LinearLayout>
</LinearLayout>
